--- a/abc.html
+++ b/abc.html
@@ -1,74 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
-
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-      integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
-      integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <style>
-    
-#big-image{
-      width:1000px;
-   margin:auto;
-    margin-left:300px;
-  
-      margin-bottom:50px;
-}
-
-.texts {
-  text-align: center;
-  font-size: 20px;
-}
-
-.texts span {
-  color: orange;
-}
-img{
-  /* width: 30px; */
-  /* height: 30%; */
-}
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>CSS Shapes: Parallelogram with Right Cross Bottom</title>
+<style>
+    .parallelogram {
+        width: 200px;
+        height: 150px;
+        background-color: #3498db;
+        position: relative;
+        transform: skewY(-20deg);
+    }
+   /* .parallelogram:before, .parallelogram:after {
+        content: '';
+        position: absolute;
+        width: 60px;
+        height: 20px;
+        background-color: #fff;
+    } */
+ /* .parallelogram:before {
+        top: 100%;
+        left: 0;
+        transform: translateY(-50%) rotate(20deg);
+    } */
+        .parallelogram:after {
+        top: calc(100% - 20px);
+        right: 0;
+        transform: translateX(50%) rotate(20deg);
+    }
+</style>
 </head>
 <body>
 
-<div id="big-image">
-  <img id="img1" src="/image/listip3.jpg" alt="">
-  <img id="img2" src="/image/cart_bad3.jpg" alt="">
-  <img id="img3" src="/image/listip1.jpg" alt="">
-</div>
+<div class="parallelogram"></div>
 
-<div class="texts">
-<p>this is just a <span data-image="img1">  <img src="/image/listip3.jpg" alt=""></span> dummy text with some lorem ipsum texts.</p>
-<p>this is just a dummy text with some lorem ipsum <span data-image="img2"><img src="/image/cart_bad3.jpg" alt=""></span>  texts.</p>
-<p>this is just a dummy text with <span data-image="img3"><img src="/image/listip1.jpg" alt=""></span>  some lorem ipsum texts.</p>
-
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
-    integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-    integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script>
-  $(function(){
-    $("#big-image img:eq(0)").nextAll().hide();
-    $(".texts span").click(function(e){
-        var imageId = $(this).attr('data-image');
-        $("#big-image #"+imageId).show().siblings().hide();
-    });
-});
-</script>
 </body>
 </html>
