--- a/owlCarsoulDemo/owl1.html
+++ b/owlCarsoulDemo/owl1.html
@@ -14,23 +14,6 @@
         integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
-        /* .cardui-main-container{
-    z-index: 2;
-    position: relative;
-    top: 280px;
-    margin: 30px;
-} */
-        /* .cardui {
-            background-color: #e6e6e6;
-            padding: 17px 17px 17px 17px;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .cardui a {
-            text-decoration: none;
-        } */
-
         .card {
             background-color: rgb(245, 245, 241);
         }
@@ -90,20 +73,208 @@
     </div>
     <h1>using autoplay autoplayTimeout carousel</h1>
     <div id="item-num3" class="owl-carousel">
-        <div> <img src="/image/abc1.jpg" alt=""></div>
-        <div> <img src="/image/abc2.jpg" alt=""></div>
-        <div> <img src="/image/abc3.jpg" alt=""> </div>
-        <div> <img src="/image/abc4.jpg" alt=""> </div>
+        <div class="slder-box">
+            <div class="div">
+                <img src="/image/carsoul1.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="afedback-form">
+                <div class="a-link-normal">
+                    <a href="">
+                        DE CAMA Since 1997 | 100% Cotton 300 TC premiunm King Size
+                        bedsheet for double
+                    </a>
+                </div>
+                <div class="review-div-card">
+                    <a href=""><i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        365
+                    </a>
+                </div>
+                <div class="limited-btn">
+                    <button type="button" class="lm-btn-carsoul">Limited time
+                        deal</button>
+                </div>
+                <div class="price-carsoul">
+                    <span class="price-pre-corosoul">-58%</span><span
+                        class="dolloer-price">$845</span>
+                </div>
+                <div class="list-price">
+                    List Price:$999.00
+                </div>
+                <div class="prime">
+                    <span>
+                        <i class="fa-solid fa-check" style="color: #FFD43B;"></i>
+                        <a href="">Prime</a>
+
+                    </span>
+                </div>
+            </div>
+        </div><div class="slder-box">
+            <div class="div">
+                <img src="/image/carsoul1.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="afedback-form">
+                <div class="a-link-normal">
+                    <a href="">
+                        DE CAMA Since 1997 | 100% Cotton 300 TC premiunm King Size
+                        bedsheet for double
+                    </a>
+                </div>
+                <div class="review-div-card">
+                    <a href=""><i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        365
+                    </a>
+                </div>
+                <div class="limited-btn">
+                    <button type="button" class="lm-btn-carsoul">Limited time
+                        deal</button>
+                </div>
+                <div class="price-carsoul">
+                    <span class="price-pre-corosoul">-58%</span><span
+                        class="dolloer-price">$845</span>
+                </div>
+                <div class="list-price">
+                    List Price:$999.00
+                </div>
+                <div class="prime">
+                    <span>
+                        <i class="fa-solid fa-check" style="color: #FFD43B;"></i>
+                        <a href="">Prime</a>
+
+                    </span>
+                </div>
+            </div>
+        </div>
     </div>
     <h1>using responsive</h1>
     <div id="item-num4" class="owl-carousel">
-        <div> <img src="/image/abc1.jpg" alt=""></div>
-        <div> <img src="/image/abc2.jpg" alt=""></div>
-        <div> <img src="/image/abc3.jpg" alt=""> </div>
-        <div> <img src="/image/abc4.jpg" alt=""> </div>
-        <div> <img src="/image/bade1.jpg" alt=""> </div>
+        <div class="slder-box">
+            <div class="div">
+                <img src="/image/carsoul1.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="afedback-form">
+                <div class="a-link-normal">
+                    <a href="">
+                        DE CAMA Since 1997 | 100% Cotton 300 TC premiunm King Size
+                        bedsheet for double
+                    </a>
+                </div>
+                <div class="review-div-card">
+                    <a href=""><i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        365
+                    </a>
+                </div>
+                <div class="limited-btn">
+                    <button type="button" class="lm-btn-carsoul">Limited time
+                        deal</button>
+                </div>
+                <div class="price-carsoul">
+                    <span class="price-pre-corosoul">-58%</span><span
+                        class="dolloer-price">$845</span>
+                </div>
+                <div class="list-price">
+                    List Price:$999.00
+                </div>
+                <div class="prime">
+                    <span>
+                        <i class="fa-solid fa-check" style="color: #FFD43B;"></i>
+                        <a href="">Prime</a>
+
+                    </span>
+                </div>
+            </div>
+        </div><div class="slder-box">
+            <div class="div">
+                <img src="/image/carsoul1.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="afedback-form">
+                <div class="a-link-normal">
+                    <a href="">
+                        DE CAMA Since 1997 | 100% Cotton 300 TC premiunm King Size
+                        bedsheet for double
+                    </a>
+                </div>
+                <div class="review-div-card">
+                    <a href=""><i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        365
+                    </a>
+                </div>
+                <div class="limited-btn">
+                    <button type="button" class="lm-btn-carsoul">Limited time
+                        deal</button>
+                </div>
+                <div class="price-carsoul">
+                    <span class="price-pre-corosoul">-58%</span><span
+                        class="dolloer-price">$845</span>
+                </div>
+                <div class="list-price">
+                    List Price:$999.00
+                </div>
+                <div class="prime">
+                    <span>
+                        <i class="fa-solid fa-check" style="color: #FFD43B;"></i>
+                        <a href="">Prime</a>
+
+                    </span>
+                </div>
+            </div>
+        </div><div class="slder-box">
+            <div class="div">
+                <img src="/image/carsoul1.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="afedback-form">
+                <div class="a-link-normal">
+                    <a href="">
+                        DE CAMA Since 1997 | 100% Cotton 300 TC premiunm King Size
+                        bedsheet for double
+                    </a>
+                </div>
+                <div class="review-div-card">
+                    <a href=""><i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+                        365
+                    </a>
+                </div>
+                <div class="limited-btn">
+                    <button type="button" class="lm-btn-carsoul">Limited time
+                        deal</button>
+                </div>
+                <div class="price-carsoul">
+                    <span class="price-pre-corosoul">-58%</span><span
+                        class="dolloer-price">$845</span>
+                </div>
+                <div class="list-price">
+                    List Price:$999.00
+                </div>
+                <div class="prime">
+                    <span>
+                        <i class="fa-solid fa-check" style="color: #FFD43B;"></i>
+                        <a href="">Prime</a>
+
+                    </span>
+                </div>
+            </div>
+        </div>
     </div>
-    <h1>card using carousel and responsive using boostrap class</h1>
+    <h1>card using and responsive using boostrap class</h1>
     <div class="cardiv-main">
         <div class="container-fluid">
             <div class="row g-3  w-100">
@@ -112,7 +283,8 @@
                         <img class="card-img-top" src="/image/bade5.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
                                 the card's content.</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
@@ -123,7 +295,8 @@
                         <img class="card-img-top" src="/image/bade6.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
                                 the card's content.</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
@@ -134,7 +307,8 @@
                         <img class="card-img-top" src="/image/bade3.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
                                 the card's content.</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
@@ -145,7 +319,8 @@
                         <img class="card-img-top" src="/image/bade4.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
                                 the card's content.</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
@@ -156,7 +331,8 @@
                         <img class="card-img-top" src="/image/bade5.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
                                 the card's content.</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
@@ -167,7 +343,8 @@
                         <img class="card-img-top" src="/image/bade6.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
                                 the card's content.</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
@@ -175,8 +352,8 @@
                 </div>
             </div>
         </div>
-   
-
+    </div>    
+  
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
             integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
