--- a/product.html
+++ b/product.html
@@ -1520,10 +1520,11 @@
 
         $('.carsoul-body-item1').owlCarousel({
             loop: true,
-            items: 7,
+            // items: 7,
+            margin:10,
             dots: false,
-            nav: true,
-            autoWidth: true,
+            // nav: true,
+            // autoWidth: true,
             responsive: {
                 0: {
                     items: 1
@@ -1532,7 +1533,7 @@
                     items: 3
                 },
                 1000: {
-                    items: 5,
+                    items: 4,
                 }
             }
         })  
